@@ -2857,7 +2857,7 @@ namespace OpenBabel {
       OBBond *nbr_bond = atom->GetBond(nbr);
       int new_needs_bsymbol = nbr_bond->IsDouble() || nbr_bond->IsTriple();
 
-      for (ai = sort_nbrs.begin(); ai != sort_nbrs.end(); ai++) {
+      for (ai = sort_nbrs.begin(); ai != sort_nbrs.end(); ++ai) {
         bond = atom->GetBond(*ai);
         int sorted_needs_bsymbol = bond->IsDouble() || bond->IsTriple();
         if (new_needs_bsymbol && !sorted_needs_bsymbol) {
@@ -2879,7 +2879,7 @@ namespace OpenBabel {
     _uatoms.SetBitOn(atom->GetIdx());     //mark the atom as visited
 
     // Build the next layer of nodes, in canonical order
-    for (ai = sort_nbrs.begin(); ai != sort_nbrs.end(); ai++) {
+    for (ai = sort_nbrs.begin(); ai != sort_nbrs.end(); ++ai) {
       nbr = *ai;
       idx = nbr->GetIdx();
       if (_uatoms[idx])   // depth-first search may have used this atom since
@@ -2963,7 +2963,7 @@ namespace OpenBabel {
       nbr1_canorder = canonical_order[nbr1->GetIdx()-1];
 
       // Insert into the bond-vector in canonical order (by neighbor atom order)
-      for (bi = vbonds.begin(); bi != vbonds.end(); bi++) {
+      for (bi = vbonds.begin(); bi != vbonds.end(); ++bi) {
         bond2 = *bi;
         nbr2 = bond2->GetNbrAtom(atom);
         nbr2_canorder = canonical_order[nbr2->GetIdx()-1];
@@ -2979,7 +2979,7 @@ namespace OpenBabel {
 
     // If we found new open bonds, assign a bond-closure digits to each one,
     // add it to _vopen, and add it to the return vector.
-    for (bi = vbonds.begin(); bi != vbonds.end(); bi++) {
+    for (bi = vbonds.begin(); bi != vbonds.end(); ++bi) {
       bond1 = *bi;
       _ubonds.SetBitOn(bond1->GetIdx());
       int digit = GetUnusedIndex();
@@ -3536,7 +3536,7 @@ namespace OpenBabel {
     m2s.CreateFragCansmiString(*pmol, frag_atoms, iso, buffer);
     if (iso) {
       pmol->Clear();
-      delete pmol;
+      delete pmol; // we created this as a temporary
     }
 
     // Could also save canonical bond order if anyone desires
